# autoloop

./: .gitignore  README.md  __init__.py  config.py  context.py  controller.py  engine.py  example_bugfix.py  executor.py  llm_client.py  prompts.py  pyproject.toml  run.py  state.py  verifier.py
docs/: spec-v1-original.md
examples/buggy_project/: calculator.py
examples/buggy_project/tests/: test_calculator.py
tools/: __init__.py  base.py  file_tools.py  shell_tools.py
